# pikolink

./: .env.example  .gitignore  Gemfile  Makefile  Procfile  README.md  package.json  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: ci.yml  django-tests.yml  test.yml
app/controllers/: dashboard_controller.rb  engineers_controller.rb  home_controller.rb  owners_controller.rb
app/decorators/: engineer_decorator.rb
app/models/: company.rb  engineer.rb  owner.rb  user.rb
apps/accounts/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
apps/analytics/: models.py  urls.py  views.py
apps/customers/: admin.py  forms.py  models.py  urls.py  views.py
apps/links/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
apps/teams/: admin.py  forms.py  models.py  urls.py  views.py
config/: application.rb  cable.yml  routes.rb  secrets.yml  settings.py  urls.py
config/environments/: production.rb
config/initializers/: active_admin.rb  devise.rb
config/settings/: base.py  development.py  production.py
config/templates/: base.html
db/: schema.rb  seeds.rb
db/migrate/: 20181130234102_create_engineers.rb  20181130234155_create_url_contacts.rb  20181201005602_create_companies.rb  20181201014120_change_url_contacts_to_owners.rb  20181201024342_add_company_id_to_engineers.rb  20181201210631_drop_owner_table.rb  (+3 more)
links/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
requirements/: development.txt  production.txt
scripts/: run_tests.py
templates/: 404.html  410.html  base.html  home.html
(+82 files in other folders)
