[tool.poetry]
name = "pikolink"
version = "0.1.0"
description = "Internal URL shortener"
authors = ["Serge Lafontaine"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django-allauth = "^0.61.1"
requests = "^2.31.0"
PyJWT = "^2.8.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
# empty for now

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
