[project]
name = "pikolink"
version = "0.1.0"
description = "Invite-only link tracking app"
authors = [
    { name = "slafontaine", email = "slafontaine10@gmail.com" }
]
requires-python = ">=3.12"
package-mode = false

dependencies = [
    "django>=6.0,<7.0",
    "django-allauth>=65.14,<66.0",
    "gunicorn (>=24.1.1,<25.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"